--- a/config/config.yaml
+++ b/config/config.yaml
@@ -7,3 +7,9 @@ data_ingestion:
   source_URL: https://github.com/ChrisEssomba/Text-Summarizer-Project/raw/refs/heads/main/summarizer-data.zip
   local_data_file: artifacts/data_ingestion/data.zip
   unzip_dir: artifacts/data_ingestion
+
+data_validation:
+  root_dir: artifacts/data_validation
+  STATUS_FILE: artifacts/data_validation/status.Text
+  ALL_REQUIRED_FILES: ["train", "test", "validation"] #ensure that the 3 folders are there
+
