--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,3 +1,5 @@
+## IN THIS FILE WE DEFINE ALL THE EXTERNAL SOURCE WHERE THE DATA IS EXTRACTED OR SAVE
+
 artifacts_root: artifacts #set the path where to store all the output data
 
 #We define the url to store the dataset from an url
@@ -13,3 +15,20 @@ data_validation:
   STATUS_FILE: artifacts/data_validation/status.Text
   ALL_REQUIRED_FILES: ["train", "test", "validation"] #ensure that the 3 folders are there
 
+#here you set the path from the ressources you'll use
+data_transformation:
+  root_dir: artifacts/data_transformation
+  data_path: artifacts/data_ingestion/samsum_dataset
+  tokenizer_name: google/pegasus-cnn_dailymail
+
+model_trainer:
+  root_dir: artifacts/model_trainer
+  data_path: artifacts/data_transformation/samsum_dataset
+  model_ckpt: google/pegasus-cnn_dailymail
+
+mode_evaluation:
+  root_dir: artifacts/model_evaluation
+  data_path: artifacts/data_transformation/samsum_dataset
+  model_path: artifacts/model_trainer/pegasus-samsum-model
+  tokenizer_path: artifacts/model_trainer/tokenizer
+  metric_file_name: artifacts/model_evaluation/metrics.csv
