--- a/params.yaml
+++ b/params.yaml
@@ -1,1 +1,13 @@
-key: value
+# IN THIS FILE WE DEFINE ALL THE HYPERPARAMETERS OF A MODEL
+
+TrainingArguments:
+  num_train_epochs: 1
+  warmup_steps: 5
+  per_device_train_batch_size: 1
+  per_device_eval_batch_size: 1
+  weight_decay: 0.0001
+  logging_steps: 1
+  #evaluation_strategy: "steps"
+  eval_steps: 50
+  save_steps: 10
+  gradient_accumulation_steps: 1
